--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.544.0",
+    "neo4j-driver": "^6.0.0",
     "next": "15.5.3",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
